Fix scrolling issue on iphone

--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
 header {
     text-align: center;
     margin-bottom: 30px;
+    position: relative;
+    z-index: 10;
 }
 
 header h1 {
@@ -36,6 +38,7 @@ header h1 {
     align-items: center;
     margin-bottom: 60px;
     position: relative;
+    z-index: 100;
 }
 
 #searchInput {
@@ -99,7 +102,7 @@ header h1 {
     min-width: 160px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     border-radius: 10px;
-    z-index: 10000;
+    z-index: 100;
     margin-top: 5px;
     overflow: hidden;
     border: 1px solid rgba(0,0,0,0.1);
